INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = liblinuxsampleraudiodriver.a
liblinuxsampleraudiodriver_a_SOURCES = AudioChannel.cpp AudioChannel.h AudioOutputDevice.cpp AudioOutputDevice.h AudioOutputDeviceAlsa.cpp AudioOutputDeviceAlsa.h AudioOutputDeviceJack.cpp AudioOutputDeviceJack.h

liblinuxsampleraudiodriver_a_DEPENDENCIES = $(JACK_LIBS)
